setup UI and add viewModel

--- a/app/src/main/res/layout/fragment_article_details.xml
+++ b/app/src/main/res/layout/fragment_article_details.xml
@@ -1,6 +1,81 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    tools:context=".ui.fragments.ArticleDetailsFragment">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/articleImage"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:contentDescription="@string/thumbnail"
+            android:scaleType="centerCrop"
+            app:layout_constraintDimensionRatio="3:2"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:srcCompat="@tools:sample/avatars" />
+
+        <TextView
+            android:id="@+id/headline"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="@dimen/margin_medium"
+            android:textColor="@android:color/black"
+            android:textSize="@dimen/details_headline_size"
+            app:layout_constraintTop_toBottomOf="@+id/articleImage"
+            tools:text="Corona disappeared from the world thanks to an amazing app" />
+
+        <TextView
+            android:id="@+id/date"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            app:layout_constraintTop_toBottomOf="@+id/headline"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_margin="@dimen/margin_medium"
+            tools:text="28.02.2021" />
+
+        <TextView
+            android:id="@+id/byLine"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@+id/headline"
+            app:layout_constraintRight_toLeftOf="@+id/date"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_margin="@dimen/margin_medium"
+            tools:text="By Donat Kiss" />
+
+        <TextView
+            android:id="@+id/weburl"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="@dimen/margin_medium"
+            app:layout_constraintTop_toBottomOf="@+id/byLine"
+            android:autoLink="web"
+            tools:text="http://nytimes.com" />
+
+        <TextView
+            android:id="@+id/abstractTextView"
+            android:layout_width="match_parent"
+            app:layout_constraintTop_toBottomOf="@+id/weburl"
+            android:layout_height="match_parent"
+            android:layout_margin="@dimen/margin_medium"
+            tools:text="People started using an interview app developed by Donat kiss and an unforeseeable sideffect happened miraculously" />
+
+        <Button
+            android:id="@+id/shareButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@+id/abstractTextView"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_margin="@dimen/margin_medium"
+            android:text="@string/share" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
