--- a/app/src/main/res/layout/fragment_article_details.xml
+++ b/app/src/main/res/layout/fragment_article_details.xml
@@ -73,6 +73,8 @@
             android:id="@+id/shareButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:drawableLeft="@drawable/ic_share"
+            android:drawableTint="@color/white"
             app:layout_constraintTop_toBottomOf="@+id/abstractTextView"
             app:layout_constraintLeft_toLeftOf="parent"
             android:layout_margin="@dimen/margin_medium"
